--- a/tmall/css/common.css
+++ b/tmall/css/common.css
@@ -14,12 +14,18 @@ body{
 /* inline/inline-block  通过设置父元素的text-align:center */
 /* banner开始 */
 .banner{
+    text-align: center;
     background: #ff2f7c;
 }
 .banner img{
     display: block; /* 图片和背景一样宽 */
     margin: 0 auto; /* 图片自动居中 */
    
+}
+.banner1{
+    display: block;
+    height: 80px;
+    background:#ff2f7c url(../image/banner.jpg) no-repeat center 0;
 }
 /* banner 结束 */
 /* header 开始 */
@@ -38,23 +44,109 @@ body{
     font-size: 12px;
     float: left;
     }
-.header-login span,.header-loger a{
+.header-login span,.header-login a{
     color:#999;
     }
 .header-login a{
-    text-decoration: none;
     padding-left: 20px;
+    }
+.header-login a:hover{
+        color: #FF0036;
     }
 .header-list{
       float: right;
     }
-    .heater-list li a{
-     color:#999;
-    }
-    .header-list li {
+.header-list li {
         float: left;
-        line-height: 40px;
-        padding:0 15px 0 20px;
     }
+.header-list>li>a{
+        color:#999;
+        padding:0 15px 0 17px;
+        height:40px;
+        line-height: 40px;
+        /* padding:40px 20px; */
+        display: block;
+    }
+.icon-ai66,.icon-shouji{
+        color:#FF0036;
+        font-size: 14px;
+
+}.header-list .list-menu{
+        position: relative;
+    }
+
+.list-menu:hover>a{
+        background: #fff;
+        text-decoration: underline; 
+        color: #FF0036;
+    }
+.arrow{
+    width: 0;
+    height: 0;
+    border: 3px solid transparent;
+    border-top-color: #999;
+    position: absolute;
+    right:7px;
+    top:20px;
+    transition: transform 0.2s ease ;
+}
+/* 在hover 动作的时候产生以下效果 */
+.header-list .list-menu:hover .arrow{
+transform: rotate(180deg);
+    transform-origin: 50% 25%;
+}
+.list-menu-no:hover > a{
+    color:#999;
+}
+
+.title{
+    height: 130px;
+    width: 1899px;
+    margin: 0 auto;
+}
+.sub-list{
+    position:absolute;
+    left:0;
+    top:40px;
+    background: #fff;
+    border:1px solid #eee;
+    border-top:none;
+    padding:5px 5px;
+    width: 100px;
+    line-height:30px;
+    display:none;
+}
+.sub-list a{
+    color:#999;
+}
+.sub-list a:hover{
+    color:red;
+    text-decoration: underline;
+}
+.header-list .list-menu:hover .sub-list{
+    display: block;
+}
+.sub-qr{
+    position: absolute;
+    left:-39px;
+    top:29px;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.15);
+    display:none;
+}
+.sub-qr::after{
+    content:'';
+    width:0;
+    height: 0;
+    border:4px solid transparent;
+    border-bottom-color:#fff;
+    position: absolute;
+    left:50%;
+    top:-8px;
+    margin-left:-4px;
+}
+.list-tel:hover .sub-qr{
+    display: block;
+}
+
 
 /* header 结束 */
