--- a/tmall/css/common.css
+++ b/tmall/css/common.css
@@ -11,6 +11,11 @@ a{
 body{
     font: 12px/1.5 tahoma,arial,"\5b8b\4f53";
 }
+.clearfix::after{
+    content: "";
+    display: block;
+    clear: both;
+}
 /* inline/inline-block  通过设置父元素的text-align:center */
 /* banner开始 */
 .banner{
@@ -33,6 +38,7 @@ body{
     background: #f2f2f2;
     height: 40px;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.30);
+    margin-bottom: 5px;
     }
 .wrapper{
      width: 1230px;
@@ -56,8 +62,9 @@ body{
 .header-list{
       float: right;
     }
-.header-list li {
+.header-list>li {
         float: left;
+        position: relative;
     }
 .header-list>li>a{
         color:#999;
@@ -98,12 +105,6 @@ transform: rotate(180deg);
 .list-menu-no:hover > a{
     color:#999;
 }
-
-.title{
-    height: 130px;
-    width: 1899px;
-    margin: 0 auto;
-}
 .sub-list{
     position:absolute;
     left:0;
@@ -128,10 +129,10 @@ transform: rotate(180deg);
 }
 .sub-qr{
     position: absolute;
-    left:-39px;
-    top:29px;
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.15);
-    display:none;
+    left:1200px;
+    top:120px;
+    box-shadow:0 0 2px 2px rgba(0,0,0,0.15);
+    display: none;
 }
 .sub-qr::after{
     content:'';
@@ -148,5 +149,5 @@ transform: rotate(180deg);
     display: block;
 }
 
-
+/* 块级元素水平居中 margin:0 auto; */
 /* header 结束 */
