--- a/tmall/css/index.css
+++ b/tmall/css/index.css
@@ -63,6 +63,7 @@
     margin:0 auto;
     /* position: absolute; */
     overflow: hidden;
+    border-bottom:2px solid red;
 }
 .inner-cont img{
     width: 100px;
@@ -92,11 +93,15 @@
     width: 1230px;
     margin:0 auto;
     background: #f000f0;
+    position: relative;
 }
 .category{
     width: 200px;
     height: 500px;
     /* background: #cccccc; */
+    position: absolute;
+    /* top:-36px; */
+    z-index:2;
 }
 .cate-title{
     height: 36px;
@@ -104,7 +109,7 @@
     color: #fff;
     background: #ff0036;
     font-size: 16px;
-    padding-left: 15px;
+    padding-left: 16px;
     font-weight: 700;
     float: left;
     /* overflow: hidden; */
@@ -112,12 +117,13 @@
 .main-cate-box{
    background:rgba(0, 0, 0, .55);
    height: 500px;
+   position: relative;
 }
 .category .main-cate{
     height: 31.2px;
     line-height: 31.2px;
     padding:0 8px;
-    position: relative;
+    /* position: relative; */
     font-weight: 700;
 }
 .main-cate>a{
@@ -132,4 +138,207 @@
 }
 .category .main-cate:nth-child(2):hover>a{
     color:blue;
+}
+.cate-sub-list{
+    width:900px;
+    height: 500px;
+    background: #fff;
+    position: absolute;
+    left:200px;
+    top:0px;
+    display:none;
+}
+.category .main-cate:hover .cate-sub-list{
+    display:block;
+}
+.list-left{
+    width: 625px;
+    height: 460px;
+    /* background:aquamarine; */
+    float: left;
+    padding: 14px 30px;
+}
+.list-right{
+    width: 197px;
+    height: 500px;
+    /* background: #0000ff; */
+    float: right;
+}
+.left-list-title{
+    width: 92px;
+    float:left;
+    color:#333;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 8px;
+    margin-top: 11px;
+
+}
+.line-con{
+    width: 515px;
+    float: left;
+    /* background: #999; */
+    border-bottom:1px dashed rgba(0,0,0,.1);
+    line-height: 31px;
+}
+.line-con a{
+    color:#666;
+    font-size:14px;
+    margin-right:13px;
+    folat:left;
+}
+.list-left-row{
+    margin:5px 0;
+}
+.left-list-content a.special-color{
+    color:#e54077;
+}
+/* 轮播图 */
+.slide-img-box img{
+    width: 1230px;
+    display: block;
+    height: 500px;
+}
+
+.slide-box{
+    position: relative;
+    height: 500px;
+}
+
+.slide-box a{
+    position: absolute;
+    left:0px;
+    top:0px;
+    /* z-index:-1; */
+}
+.slide-btn-box{
+    position: absolute;
+    bottom:50px;
+    left:50%;
+    background: yellow;
+    width:200px;
+    /* 已知宽度 */
+    /* margin-left:-100px; */
+    /* 不知道宽度  css3 transform: translateX(-50%); */
+    transform: translateX(-50%);
+
+}
+/* 品牌闪购 */
+
+.brand-sale{
+    height: 370px;
+    /* background: pink; */
+    margin-top:30px;
+}
+.brand-list{
+    width: 234px;
+    background: #fff;
+    float: left;
+}
+.brand-list-title{
+    padding-left:10px;
+    height: 54px;
+    line-height: 54px;
+    font-family: "Microsoft YaHei",SimSun,'\5b8b\4f53',sans-serif;
+}
+.brand-title-cn{
+    font-size: 18px;
+    color: #333;
+    font-weight: 700;
+    margin-right:4px;
+}
+.brand-title-en{
+    font-size: 18px;
+    color: #333;
+    font-weight: 700;
+}
+.brand-more{
+    float: right;
+    height: 18px;
+    margin-top:5px;
+    margin-right:15px;
+}
+.brand-more img{
+    width:18px;
+    height: 18px;
+    /* margin-top:10px; */
+}
+.brand-list-img img{
+    width: 234px;
+    height: 316px;
+    display: block;
+}
+.brand-list-2{
+    width: 485px;
+    margin-left:12px;
+}
+.brand-list-2 .brand-list-img img{
+    width: 485px;
+}
+.brand-list-img img:hover{
+    /* 透明度 */
+    opacity: 0.8 ;
+    /* ie兼容写法 */
+    filter: alpha(opacity=80); 
+}
+.more{
+    line-height: normal;
+    /* 垂直对齐方式 */
+    vertical-align: 5px;
+
+}
+/* brand-logo */
+.brand-logo{
+    background: pink;
+    margin-top: 15px;
+
+}
+.brand-logo li{
+    width: 122px;
+    height: 108px;
+    background: #fff;
+    overflow: hidden;
+    position: relative;
+}
+.brand-logo li img{
+    width: 82%;
+    height: 50px;
+    display: block;
+    margin:30px auto;
+
+}
+/* 浮动 或定位 宽度 内容撑的 */
+/* inline-block  inline 在父元素中居中 可以设置父元素的text-align :center */
+.brand-logo-mask{
+    position: absolute;
+    left:0px;
+    top:0px;
+    bottom:0px;
+    right:0px;
+    background:rgba(0,0,0,0.8);
+    /* width:100%;
+    height: 100%; */
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.5s ease ;
+}
+.coupon{
+    color: #fff;
+    text-align: center;
+    margin-top:38px;
+}
+.enter{
+    display: inline-block;
+    width: 63px;
+    height: 18px;
+    line-height: 18px;
+    background: #ff0036;
+    color: #fff;
+    text-align: center;
+    border-radius:9px;
+    margin-top:5px;
+}
+
+.brand-logo li:hover .brand-logo-mask{
+    opacity: 1;
 }
